--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,12 @@
 <html lang="{{ site.lang | default: 'tr' }}">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>{{ page.title }} | {{ site.title }}</title>
   {%- seo -%}
+  <!-- Tema ana stil dosyası -->
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <!-- Ek özel stiller -->
   <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 </head>
 <body>
