--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,6 @@
 ---
-# Front matter Jekyll'in SCSS derlemesini tetikler
 ---
-@import "{{ site.theme }}";
+@import "jekyll-theme-slate";
 
 /* Özel stil ekleri */
 .site-nav ul {list-style:none; margin:0; padding:0; display:flex; gap:1rem;}
