--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@
         {% if site.github.is_project_page %}
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
         {% endif %}
+        {% if site.logo %}
+          <div class="site-logo"><img src="{{ site.logo }}" alt="{{ site.title }} logo" width="80" height="80" loading="lazy"></div>
+        {% endif %}
         <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
         <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         {% include nav.html %}
