--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,1 +1,2 @@
+<meta name="google-site-verification" content="maojydoZTocZGE26ZC6Dl-CPbY1VdIqV6rUMTbbLBSs" />
 {% include head-custom-google-analytics.html %}
