--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,6 @@ layout: default
 ---
 <article class="post">
   <h1>{{ page.title }}</h1>
-  <p class="post-meta"><small>{{ page.date | date: "%Y-%m-%d" }}{% if page.tags %} • {{ page.tags | join: ", " }}{% endif %}</small></p>
+  <p class="post-meta"><small>{{ page.date | date: "%Y-%m-%d" }}{% assign author_name = page.author | default: site.author %}{% if author_name %} • <a href="{{ '/authors/' | append: (author_name | slugify) | append: '/' | relative_url }}">{{ author_name }}</a>{% endif %}{% if page.tags %} • {{ page.tags | join: ", " }}{% endif %}</small></p>
   {{ content }}
 </article>
