fix(head-custom): 🐛 add Yandex site verification meta tag
* Included a new `<meta>` tag for Yandex site verification to enhance site visibility.

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,3 @@
 <meta name="google-site-verification" content="maojydoZTocZGE26ZC6Dl-CPbY1VdIqV6rUMTbbLBSs" />
+<meta name="yandex-verification" content="4d7e20d5c00ba71d" />
 {% include head-custom-google-analytics.html %}
