--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{%- seo title=false -%}
 <article class="post">
   <h1>{{ page.title }}</h1>
   <p class="post-meta"><small>{% assign author_name = page.author | default: site.author %}{% assign author_slug = author_name | slugify %}{% if author_name %}<a href="{{ '/authors/' | append: author_slug | append: '/' | relative_url }}">{{ author_name }}</a> • {% endif %}{{ page.date | date: "%Y-%m-%d" }}{% if page.tags %} • {{ page.tags | join: ", " }}{% endif %}</small></p>
