--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    {% seo %}
+    {%- if page.layout == 'post' -%}
+      {%- if page.title -%}
+        <title>{{ page.title | escape }}</title>
+      {%- else -%}
+        <title>{{ site.title | escape }}</title>
+      {%- endif -%}
+    {%- else -%}
+      {%- if page.title and site.title -%}
+        <title>{{ page.title | escape }} | {{ site.title | escape }}</title>
+      {%- elsif page.title -%}
+        <title>{{ page.title | escape }}</title>
+      {%- else -%}
+        <title>{{ site.title | escape }}</title>
+      {%- endif -%}
+    {%- endif -%}
+    {% seo title=false %}
     {% include head-custom.html %}
   </head>
   <body>
